<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/yemek_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/yemek_olu_turma_sayfas" />

        <EditText
            android:id="@+id/FB_yemekedit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="text"
            />

        <Spinner
            android:id="@+id/FB_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <RadioGroup

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioGroup">

            <RadioButton
                android:id="@+id/FB_radioAcılı"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/ac_l"
                android:layout_marginTop="10dp"
                android:checked="false"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/FB_radioAcısız"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/ac_s_z"
                android:layout_marginTop="20dp"
                android:checked="false"

                android:textSize="20sp" />
        </RadioGroup>

        <CheckBox
            android:id="@+id/FB_checkbox"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/kap_ya_as" />

        <Button
            android:id="@+id/FB_foto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/foto_ek_m" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:srcCompat="@tools:sample/avatars"
            android:contentDescription="@string/todo" />

        <Button
            android:id="@+id/FB_ürün"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="goUrun"
            android:text="@string/r_n_olu_tur" />

        <Button
            android:id="@+id/FB_listview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="goListView"
            android:text="@string/listview_g_ster" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>